# review-analyzer

./: README.md  main.py  pyproject.toml  test.ipynb
.devcontainer/: Dockerfile  devcontainer.json
result/: google.csv
src/: comprehender.py  score_plotter.py  scrapyer.py
