[tool.poetry]
name = "review-analyzer"
version = "0.1.0"
description = ""
authors = ["yu-min"]

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.114"
beautifulsoup4 = "^4.12.3"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
python-dotenv = "^1.0.1"
jupyter = "^1.0.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"